--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"node api/index.js\" \"node index.js\""
+    "start": "node api/index.js"
   },
   "repository": {
     "type": "git",
