--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js >> /var/log/temp_api.log 2>&1"
+    "api": "node api/index.js >> /var/log/temp_api.log 2>&1",
+    "web": "node web/index.js >> /var/log/temp_web.log 2>&1"
   },
   "repository": {
     "type": "git",
