--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "api": "node api/index.js >> /var/log/temp_api.log 2>&1",
-    "web": "node web/index.js >> /var/log/temp_web.log 2>&1"
+    "web": "node web/index.js >> /var/log/temp_web.log 2>&1",
+    "start": "concurrently \"npm run api\" \"npm run web\""
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,13 @@
     "url": "https://github.com/hartalex/temperature_hub/issues"
   },
   "homepage": "https://github.com/hartalex/temperature_hub#readme",
-  "devDependencies": {
-    "concurrently": "^3.3.0"
-  },
   "dependencies": {
+    "body-parser": "^1.16.1",
+    "concurrently": "^3.3.0",
+    "cors": "^2.8.1",
     "es6-promise": "^4.0.5",
-    "isomorphic-fetch": "^2.2.1"
+    "express": "^4.14.1",
+    "isomorphic-fetch": "^2.2.1",
+    "mongodb": "^2.2.24"
   }
 }
