--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
     "express": "^4.14.1",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.24"
+  },
+  "devDependencies": {
+    "eslint": "^3.16.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-standard": "^2.0.1"
   }
 }
