--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint pollingService.js api/** web/**",
     "api": "node api/index.js >> /var/log/temp_api.log 2>&1",
     "web": "node web/index.js >> /var/log/temp_web.log 2>&1",
-    "start": "concurrently \"npm run api\" \"npm run web\""
+    "start": "npm run api"
   },
   "repository": {
     "type": "git",
