--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-standard": "^2.0.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "simple-mock": "^0.7.3"
   }
 }
