--- a/package.json
+++ b/package.json
@@ -19,17 +19,35 @@
   },
   "homepage": "https://github.com/hartalex/temperature_hub#readme",
   "dependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-loader": "^6.4.0",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
+    "css-loader": "^0.27.1",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "image-webpack-loader": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "mongodb": "^2.2.24"
+    "mongodb": "^2.2.24",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "resolve-url-loader": "^2.0.2",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.1"
   },
   "devDependencies": {
     "eslint": "^3.16.0",
     "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
     "mocha": "^3.2.0",
     "simple-mock": "^0.7.3"
