--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
+    "clean": "rimraf build",
+    "build": "npm run clean && babel server.js -d build/ && webpack",
     "lint": "eslint api/**",
-    "start": "node api/index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +38,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "resolve-url-loader": "^2.0.2",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
