--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-hot-middleware": "^2.17.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^3.16.0",
