--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "clean": "rimraf build",
     "build": "npm run clean && babel server.js -d build && babel web -d build/client && webpack",
-    "lint": "eslint api/**",
+    "lint": "eslint api/** web/**",
     "start": "node build/server.js"
   },
   "repository": {
