--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/hartalex/temperature_hub#readme",
   "dependencies": {
+    "babel-core": "^6.0.0",
     "babel-cli": "^6.23.0",
     "babel-loader": "^6.4.0",
     "babel-preset-latest": "^6.22.0",
