--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ script:
     - yarn run lint
     - yarn run test
     - yarn run build
+ notifications:
+    slack: hartcode:GqPCaLxnPqXfPJBMjJbEvG81
