--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "nyc mocha",
+    "coverage": "nyc report --reporter=text-lcov > lcov.info",
     "clean": "rimraf build",
     "build": "npm run clean && babel server.js -d build && babel web -d build/client && webpack",
     "lint": "eslint api/** web/**",
@@ -21,8 +22,8 @@
   },
   "homepage": "https://github.com/hartalex/temperature_hub#readme",
   "dependencies": {
-    "babel-core": "^6.0.0",
     "babel-cli": "^6.23.0",
+    "babel-core": "^6.0.0",
     "babel-loader": "^6.4.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
@@ -57,7 +58,9 @@
     "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "nyc": "^10.3.2",
     "simple-mock": "^0.7.3"
   }
 }
