--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 script:
     - yarn run lint
     - yarn run test
+    - yarn run coverage
     - yarn run build
 notifications:
     slack: hartcode:GqPCaLxnPqXfPJBMjJbEvG81
