--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "greenlock-express": "^2.0.11",
     "image-webpack-loader": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.24",
