--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "nyc mocha",
     "coverage": "nyc report --reporter=text-lcov > lcov.info",
     "clean": "rimraf build",
-    "build": "npm run clean && babel server.js -d build && babel web -d build/client && webpack",
+    "build": "yarn run clean && babel server.js config.js greenlock.js -d build",
     "lint": "eslint api/** web/**",
-    "start": "node build/server.js"
+    "start": "yarn build && node build/server.js"
   },
   "repository": {
     "type": "git",
@@ -24,43 +24,48 @@
   "dependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.0.0",
-    "babel-loader": "^6.4.0",
+    "babel-loader": "7.1.1",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
-    "css-loader": "^0.27.1",
+    "css-loader": "0.28.4",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
-    "greenlock-express": "^2.0.11",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "greenlock": "2.x",
     "image-webpack-loader": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
+    "le-acme-core": "2.x",
+    "le-challenge-fs": "2.x",
+    "le-challenge-sni": "2.x",
+    "le-sni-auto": "2.x",
+    "le-store-certbot": "2.x",
     "mongodb": "^2.2.24",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-google-charts": "^1.5.3",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.6.1",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
+    "webpack": "3.0.0",
+    "webpack-dev-server": "^2.5.0",
     "webpack-hot-middleware": "^2.17.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "^3.16.0",
-    "eslint-config-standard": "^6.2.1",
+    "eslint": "^4.1.1",
+    "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx": "0.0.2",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-promise": "^3.4.2",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-standard": "^3.0.1",
     "mocha": "^3.2.0",
-    "nyc": "^10.3.2",
-    "simple-mock": "^0.7.3"
+    "nyc": "^11.0.3",
+    "simple-mock": "^0.8.0"
   }
 }
