--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.1",
     "css-loader": "0.28.4",
     "es6-promise": "^4.0.5",
+    "eslint-plugin-node": "^5.1.0",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
