--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rimraf build",
     "build": "yarn run clean && babel server.js config.js greenlock.js -d build",
     "lint": "eslint api/** web/**",
-    "start": "yarn build && node build/server.js"
+    "start": "yarn build && node build/server.js",
+    "version": "node -v"
   },
   "repository": {
     "type": "git",
