--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "greenlock": "2.x",
+    "greenlock-express": "^2.0.11",
     "image-webpack-loader": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "le-acme-core": "2.x",
