Remove greenlock's shitty api that doesn't work

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "nyc mocha",
     "coverage": "nyc report --reporter=text-lcov > lcov.info",
     "clean": "rimraf build",
-    "build": "yarn run clean && babel server.js config.js greenlock.js -d build",
+    "build": "yarn run clean && babel server.js config.js -d build",
     "lint": "eslint api/** web/**",
     "start": "yarn build && node build/server.js",
     "version": "node -v"
@@ -36,15 +36,8 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
-    "greenlock": "2.x",
-    "greenlock-express": "^2.0.11",
     "image-webpack-loader": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "le-acme-core": "2.x",
-    "le-challenge-fs": "2.x",
-    "le-challenge-sni": "2.x",
-    "le-sni-auto": "2.x",
-    "le-store-certbot": "2.x",
     "mongodb": "^2.2.24",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
