--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha",
+    "test": "nyc mocha src/test/",
     "coverage": "nyc report --reporter=text-lcov > lcov.info",
     "clean": "rimraf build",
-    "build": "yarn run clean && babel server.js config.js -d build",
-    "lint": "eslint api/** web/**",
-    "start": "yarn build && node build/server.js",
+    "build": "npm run clean && babel src/server -d build/server && webpack",
+    "lint": "eslint src/**",
+    "start": "node build/server/server.js",
+    "prodstart": "node build/server/server.prod.js",
     "version": "node -v"
   },
   "repository": {
@@ -23,45 +24,46 @@
   },
   "homepage": "https://github.com/hartalex/temperature_hub#readme",
   "dependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.0.0",
-    "babel-loader": "7.1.1",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
     "body-parser": "^1.16.1",
     "cors": "^2.8.1",
-    "css-loader": "0.28.4",
+    "ejs": "^2.5.7",
     "es6-promise": "^4.0.5",
-    "eslint-plugin-node": "^5.1.0",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "image-webpack-loader": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.24",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-google-charts": "^1.5.3",
-    "resolve-url-loader": "^2.0.2",
-    "rimraf": "^2.6.1",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.8",
-    "webpack": "3.0.0",
-    "webpack-dev-server": "^2.5.0",
-    "webpack-hot-middleware": "^2.17.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.0.0",
+    "babel-loader": "7.1.1",
+    "babel-preset-latest": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "css-loader": "0.28.4",
     "eslint": "^4.1.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx": "0.0.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-node": "^5.1.0",
     "eslint-plugin-promise": "^3.4.2",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "image-webpack-loader": "^3.2.0",
     "mocha": "^3.2.0",
     "nyc": "^11.0.3",
-    "simple-mock": "^0.8.0"
+    "resolve-url-loader": "^2.0.2",
+    "rimraf": "^2.6.1",
+    "simple-mock": "^0.8.0",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.8",
+    "webpack": "3.0.0",
+    "webpack-dev-server": "^2.5.0",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
