--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cors": "^2.8.1",
     "ejs": "^2.5.7",
     "es6-promise": "^4.0.5",
-    "express": "^4.14.1",
+    "express": "^4.15.5",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.24",
     "react": "^15.4.2",
@@ -37,33 +37,35 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.0.0",
-    "babel-loader": "7.1.1",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "css-loader": "0.28.4",
-    "eslint": "^4.1.1",
+    "babel-cli": "^7.0.0-beta.2",
+    "babel-core": "^7.0.0-beta.2",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-minify": "^0.2.0",
+    "babel-preset-react": "^7.0.0-beta.2",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.7.2",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx": "0.0.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-node": "^5.1.0",
-    "eslint-plugin-promise": "^3.4.2",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
-    "image-webpack-loader": "^3.2.0",
-    "mocha": "^3.2.0",
+    "image-webpack-loader": "^3.4.2",
+    "mocha": "^3.5.3",
     "nyc": "^11.0.3",
-    "resolve-url-loader": "^2.0.2",
-    "rimraf": "^2.6.1",
+    "resolve-url-loader": "^2.1.0",
+    "rimraf": "^2.6.2",
     "simple-mock": "^0.8.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.8",
-    "webpack": "3.0.0",
-    "webpack-dev-server": "^2.5.0",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2",
+    "webpack-hot-middleware": "^2.17.1",
+    "uglifyjs-webpack-plugin": "1.0.0-beta.2"
   }
 }
