--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "express": "^4.15.5",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.24",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
     "react-google-charts": "^1.5.3",
     "whatwg-fetch": "^2.0.3"
   },
