--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,61 @@ cache:
   directories:
     - "$HOME/google-cloud-sdk/"
     - node_modules
-language: node_js
-services:
-  - docker
-node_js:
-  - "node"
-script:
-  - npm run lint
-  - npm run test
-  - npm run coverage
-  - npm run build
+language: 
+  - node_js
+      - python
+python: 2.7
+stages:
+  - name: update_depends
+    if: type IN (cron)
+  - name: build
+    if: type IN (push, pull_request)
+  - name: deploy
+    if: branch IN (test, prod) and type = push
+ services:
+   - docker
+ node_js:
+  - node
+ jobs:
+  include:
+    - stage: build
+      script:
+        - npm run lint
+        - npm run test
+        - npm run coverage
+        - npm install -g codeclimate-test-reporter
+        - codeclimate-test-reporter < lcov.info
+        - npm run build
+    - stage: deploy
+      script:
+        - npm run build
+        - pip install ansible --user
+        - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key  -iv $encrypted_71512d77c8b2_iv  -in secrets.tar.enc -out secrets.tar -d
+        - tar xvf secrets.tar
+        - ./deployToGCS.sh temperature_hub 
+        - ./deployAnsible.sh
+    - stage: update_depends
+      script:
+        - ./updateDepends.sh
+        - npm run lint
+        - npm run test
+        - npm install -g codeclimate-test-reporter
+        - codeclimate-test-reporter < lcov.info
+        - npm run build
+      after_success:
+        - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key  -iv $encrypted_71512d77c8b2_iv  -in secrets.tar.enc -out secrets.tar -d
+        - git config --global user.email "travis@travis-ci.org"
+        - git config --global user.name "Travis CI"
+        - git add package.json
+        - git commit -m "Cron Auto Updated Dependencies [ci skip]"
+        - tar xvf secrets.tar
+        - chmod 400 travis
+        - eval "$(ssh-agent -s)"
+        - ssh-add travis
+        - git remote add deploy git@github.com:hartcode/hartcode.com.git
+        - git push deploy HEAD:master
 notifications:
     slack: hartcode:GqPCaLxnPqXfPJBMjJbEvG81
 addons:
   code_climate:
     repo_token: 6f1ad54db4b7278e83e68592bcbc67c149c9a3a41543adec8f640737f8e00b2d
-after_success:
-  - npm install -g codeclimate-test-reporter
-  - codeclimate-test-reporter < lcov.info
-  - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key -iv $encrypted_71512d77c8b2_iv -in client-secret.json.enc -out client-secret.json -d
-  - ./deployToGCS.sh temperature_hub
