--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-cli": "^7.0.0-beta.2",
-    "babel-core": "^7.0.0-beta.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-minify": "^0.2.0",
-    "babel-preset-react": "^7.0.0-beta.2",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.7.2",
     "eslint-config-standard": "^10.2.1",
@@ -53,19 +53,18 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.4",
     "image-webpack-loader": "^3.4.2",
-    "mocha": "^3.5.3",
+    "mocha": "^4.0.0",
     "nyc": "^11.0.3",
     "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.2",
     "simple-mock": "^0.8.0",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.8",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.1",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2",
-    "webpack-hot-middleware": "^2.17.1",
-    "uglifyjs-webpack-plugin": "1.0.0-beta.2"
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
