--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-google-charts": "^1.5.3",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -58,6 +60,7 @@
     "image-webpack-loader": "^3.4.2",
     "mocha": "^4.0.0",
     "nyc": "^11.0.3",
+    "redux-devtools": "^3.4.1",
     "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.2",
     "simple-mock": "^0.8.0",
