--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ejs": "^2.5.7",
     "es6-promise": "^4.0.5",
     "express": "^4.15.5",
+    "express-cache-headers": "^0.1.3",
     "express-force-ssl": "^0.3.2",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.24",
