--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.15.5",
     "express-cache-headers": "^0.1.3",
     "express-force-ssl": "^0.3.2",
+    "express-winston": "^2.4.0",
     "isomorphic-fetch": "^2.2.1",
     "mongodb": "^2.2.24",
     "react": "16.0.0",
@@ -39,7 +40,8 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "request": "^2.83.0",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
