--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ jobs:
         - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key  -iv $encrypted_71512d77c8b2_iv  -in secrets.tar.enc -out secrets.tar -d
         - git config --global user.email "travis@travis-ci.org"
         - git config --global user.name "Travis CI"
+        - node version patch
         - git add package.json
         - git commit -m "Cron Auto Updated Dependencies [ci skip]"
         - tar xvf secrets.tar
