--- a/.travis.yml
+++ b/.travis.yml
@@ -49,15 +49,15 @@ jobs:
         - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key  -iv $encrypted_71512d77c8b2_iv  -in secrets.tar.enc -out secrets.tar -d
         - git config --global user.email "travis@travis-ci.org"
         - git config --global user.name "Travis CI"
-        - node version patch
         - git add package.json
-        - git commit -m "Cron Auto Updated Dependencies [ci skip]"
+        - node version patch -m "%s - Cron Auto Update Dependencies [ci skip]"
         - tar xvf secrets.tar
         - chmod 400 travis
         - eval "$(ssh-agent -s)"
         - ssh-add travis
-        - git remote add deploy git@github.com:hartcode/hartcode.com.git
-        - git push deploy HEAD:master
+        - git remote add origin git@github.com:hartcode/hartcode.com.git
+        - npm version patch -m "%s - Cron Auto Update Dependencies [ci skip]"
+        - git push origin HEAD:master
 notifications:
     slack: hartcode:GqPCaLxnPqXfPJBMjJbEvG81
 addons:
