--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "request": "^2.83.0",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.3",
+    "winston": "2.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -73,7 +74,6 @@
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.1.1",
-    "webpack-hot-middleware": "^2.21.2",
-    "winston": "2.4.0"
+    "webpack-hot-middleware": "^2.21.2"
   }
 }
