--- a/.travis.yml
+++ b/.travis.yml
@@ -22,15 +22,15 @@ jobs:
   include:
     - stage: build
       script:
-        - npm run lint
-        - npm run test
-        - npm run coverage
-        - npm install -g codeclimate-test-reporter
+        - yarn run lint
+        - yarn run test
+        - yarn run coverage
+        - yarn install -g codeclimate-test-reporter
         - codeclimate-test-reporter < lcov.info
-        - npm run build
+        - yarn run build
     - stage: deploy
       script:
-        - npm run build
+        - yarn run build
         - pip install ansible --user
         - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key  -iv $encrypted_71512d77c8b2_iv  -in secrets.tar.enc -out secrets.tar -d
         - tar xvf secrets.tar
@@ -39,12 +39,12 @@ jobs:
     - stage: update_depends
       script:
         - ./updateDepends.sh
-        - npm run lint
-        - npm run test
-        - npm run coverage
-        - npm install -g codeclimate-test-reporter
+        - yarn run lint
+        - yarn run test
+        - yarn run coverage
+        - yarn install -g codeclimate-test-reporter
         - codeclimate-test-reporter < lcov.info
-        - npm run build
+        - yarn run build
       after_success:
         - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key  -iv $encrypted_71512d77c8b2_iv  -in secrets.tar.enc -out secrets.tar -d
         - git config --global user.email "travis@travis-ci.org"
