--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "image-webpack-loader": "^4.1.0",
+    "image-webpack-loader": "4.3.1",
     "istanbul-instrumenter-loader": "^3.0.1",
     "mocha": "^5.0.4",
     "nyc": "^11.4.1",
