--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "webpack --mode development --config webpack.test.config.js && mocha build/test.js",
-    "test-coverage": "webpack --mode development --config webpack.test.config.js && nyc mocha build/test.js",
-    "coverage": "nyc report --reporter=text-lcov > lcov.info",
+    "test": "node scripts/test.js --env=jsdom",
     "clean": "rimraf build",
     "build": "yarn run clean && babel src/server -d build/server && webpack",
     "lint": "eslint src/**",
@@ -45,16 +43,16 @@
     "winston": "2.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-minify": "^0.3.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.2",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-runtime": "6.26.0",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.10",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.2.0",
     "eslint": "^4.18.2",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.9.0",
@@ -67,9 +65,9 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "4.3.1",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "mocha": "^5.0.4",
-    "nyc": "^11.4.1",
+    "jest": "23.1.0",
+    "promise": "8.0.1",
+    "raf": "3.4.0",
     "redux-devtools": "^3.4.1",
     "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
@@ -82,23 +80,47 @@
     "webpack-hot-middleware": "^2.21.2",
     "webpack-node-externals": "^1.6.0"
   },
-  "nyc": {
-    "check-coverage": true,
-    "lines": 50,
-    "require": [
-      "babel-register"
+  "jest": {
+    "collectCoverageFrom": [
+      "src/client/**/*.{js,jsx,mjs}",
+      "src/server/**/*.{js,jsx,mjs}"
     ],
-    "sourceMap": true,
-    "instrument": false,
-    "exclude": [
-      "build",
-      "webpack.config.js",
-      "webpack.test.config.js",
-      "node_modules",
-      "scripts",
-      "views"
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
     ],
-    "cache": true,
-    "all": true
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node",
+      "mjs"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
