Try installing docker python dependency for deployments

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 cache:
   directories:
-    - "$HOME/google-cloud-sdk/"
+    - '$HOME/google-cloud-sdk/'
     - node_modules
 language:
   - node_js
@@ -31,6 +31,7 @@ jobs:
       script:
         - yarn run build
         - pip install ansible --user
+        - pip install docker
         - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key  -iv $encrypted_71512d77c8b2_iv  -in secrets.tar.enc -out secrets.tar -d
         - tar xvf secrets.tar
         - ./deployToGCS.sh temperature_hub
@@ -56,7 +57,7 @@ jobs:
         - npm version patch -f -m "%s - Cron Auto Update Dependencies [ci skip]"
         - git push deploy HEAD:master
 notifications:
-    slack: hartcode:GqPCaLxnPqXfPJBMjJbEvG81
+  slack: hartcode:GqPCaLxnPqXfPJBMjJbEvG81
 addons:
   code_climate:
     repo_token: 6f1ad54db4b7278e83e68592bcbc67c149c9a3a41543adec8f640737f8e00b2d
