Try installing docker python module as user

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
       script:
         - yarn run build
         - pip install ansible --user
-        - pip install docker
+        - pip install docker --user
         - openssl aes-256-cbc -K $encrypted_71512d77c8b2_key  -iv $encrypted_71512d77c8b2_iv  -in secrets.tar.enc -out secrets.tar -d
         - tar xvf secrets.tar
         - ./deployToGCS.sh temperature_hub
