--- a/.ansible-deploy.yml
+++ b/.ansible-deploy.yml
@@ -17,11 +17,12 @@
         recreate: yes
         restart_policy: always
         ports:
-          - '80:80'
-          - '443:443'
+          - '80:3000'
+          - '443:3000'
         volumes:
           - '/home/hartalex/temp_hub/config.js:/root/temperature_hub/build/server/config.js'
           - '/home/hartalex/temp_hub/logdir:/var/log'
+          - '/etc/ssl:/etc/ssl'
         network_mode: host
     - name: restart mongo
       become: true
