Add different deploys per environment

--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -1,5 +1,6 @@
 hartweb:
   hosts:
     hub.cloud.hartcode.com:
+    homehub.cloud.test.hartcode.com:
   vars:  
     ansible_ssh_private_key_file: ansible
