--- a/playbooks/prod-deploy-playbook.yml
+++ b/playbooks/prod-deploy-playbook.yml
@@ -39,7 +39,7 @@
         network_mode: host
     - wait_for: timeout=5
     - name: Get JSON from page
-      uri: url="http://127.0.0.1:3000/info" return_content=yes
+      uri: url="https://127.0.0.1:3000/info" return_content=yes
       register: json_response
     - name: Validate commit
       fail: msg="The commits don't match"
