--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "7.4.0",
     "express": "^4.16.3",
     "express-cache-headers": "^0.1.4",
+    "express-force-ssl": "^0.3.2",
     "express-winston": "^3.0.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
