add python cache to travis cache for faster builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ cache:
   directories:
     - '$HOME/google-cloud-sdk/'
     - node_modules
+    - '$HOME/.cache/'
 language:
   - node_js
   - python
