--- a/playbooks/test-deploy-playbook.yml
+++ b/playbooks/test-deploy-playbook.yml
@@ -26,8 +26,7 @@
           - '/home/hartalex/temp_hub/logdir:/var/log'
           - '/etc/ssl:/etc/ssl'
         network_mode: host
-        env:
-          API_URL:"{{api_url}}"
+        env: API_URL="{{api_url}}"
     - name: restart mongo
       become: true
       docker_container:
