--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,7 @@ jobs:
   include:
     - stage: build
       script:
-        - yarn run lint
-        - yarn run test
-        - yarn global add codeclimate-test-reporter
-        - codeclimate-test-reporter < coverage/lcov.info
-        - yarn run build
+        - . ./scripts/build.sh
     - stage: deploy
       script:
         - yarn run build
