--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "23.1.0",
     "lodash.debounce": "^4.0.8",
     "mongodb": "^3.1.4",
