--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
       "^src$/(.*)": "<rootDir>/src/$1",
-      "^util$/(.*)": "<rootDir>/src/util/$1"
+      "^util$/(.*)": "<rootDir>/src/util/$1",
+      "^server$/(.*)": "<rootDir>/src/server/$1"
     },
     "moduleFileExtensions": [
       "web.js",
