--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "request": "^2.83.0",
+    "socket.io-client": "^2.2.0",
     "whatwg-fetch": "^2.0.3",
     "winston": "2.4.0"
   },
